<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>org.alfresco.tas</groupId>
   <artifactId>share-test</artifactId>
   <version>6.0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
      <suiteXmlFile>src/test/resources/share-sanity-suite.xml</suiteXmlFile>
      <tas.utility.version>2.0.26</tas.utility.version>
      <maven-remote-resources.version>1.6.0</maven-remote-resources.version>
      <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
      <tas.cmis.version>6.0.0.1</tas.cmis.version>
      <java.version>11</java.version>
   </properties>

   <distributionManagement>
      <snapshotRepository>
         <id>alfresco-internal-snapshots</id>
         <url>
            https://nexus.alfresco.com/nexus/contecheckAlfrescoOneLogoInVersiondialognt/repositories/internal-snapshots/
         </url>
      </snapshotRepository>
      <repository>
         <id>alfresco-internal</id>
         <url>https://nexus.alfresco.com/nexus/content/repositories/internal-releases/</url>
      </repository>
   </distributionManagement>

   <dependencies>
      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>utility</artifactId>
         <version>${tas.utility.version}</version>
      </dependency>
           
      <dependency>
         <groupId>org.uncommons</groupId>
         <artifactId>reportng</artifactId>
         <version>1.1.2</version>
         <scope>test</scope>
         <exclusions>
            <exclusion>
               <groupId>org.testng</groupId>
               <artifactId>testng</artifactId>
            </exclusion>

            <exclusion>
               <groupId>seleniumhq.selenium</groupId>
               <artifactId>selenium-java</artifactId>
            </exclusion>

         </exclusions>
      </dependency>

      <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
         <version>RELEASE</version>
      </dependency>

      <!--<dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>cmis-test</artifactId>
         <version>${tas.cmis.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
      </dependency>-->

      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>cmis-test</artifactId>
         <version>${tas.cmis.version}</version>
      </dependency>

   </dependencies>
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <artifactId>maven-remote-resources-plugin</artifactId>
               <version>${maven-remote-resources.version}</version>
            </plugin>
         </plugins>
      </pluginManagement>

      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>${maven-jar-plugin.version}</version>
            <executions>
               <execution>
                  <goals>
                     <goal>test-jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven-compiler-plugin.version}</version>
            <configuration>
             	<release>${java.version}</release>
				<showWarnings>true</showWarnings>
				<showDeprecation>true</showDeprecation>
            </configuration>
         </plugin>

		<plugin>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>3.0.0-M1</version>
			<executions>
				<execution>
					<id>default-deploy</id>
					<phase>deploy</phase>
					<goals>
						<goal>deploy</goal>
					</goals>
				</execution>
			</executions>
		</plugin>		
		
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M3</version>
            <configuration>
               <reportFormat>plain</reportFormat>
               <trimStackTrace>false</trimStackTrace>
               <forkMode>never</forkMode>
               <suiteXmlFiles>
                  <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
               </suiteXmlFiles>
               <argLine>
				--illegal-access=permit
			   </argLine>                              
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-remote-resources-plugin</artifactId>
            <configuration>
               <resourceBundles>
                  <resourceBundle>org.alfresco.tas:utility:${tas.utility.version}</resourceBundle>
               </resourceBundles>
            </configuration>
            <executions>
               <execution>
                  <goals>
                     <goal>process</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

      </plugins>
   </build>
</project>
